написал тесты для удаления обещаний и исправил баги во view
